Integrated server